--- a/app/views/cards/_old_show.html.erb
+++ b/app/views/cards/_old_show.html.erb
@@ -18,6 +18,9 @@
   <%= @card.detectFace %>
 </p>
 <%# <%= @cart.faewfa %>
+<p>
+  <%= @card.xml_doc %>
+</p>
 
 <%= link_to 'Edit', edit_card_path(@card) %> |
 <%= link_to 'Back', cards_path %>
