--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= card.image_url %></td>
         <td><%= card.offense %></td>
-        <td><%= card.stamina %></td>
+        <td><%= card.defense %></td>
         <td><%= link_to 'Show', card %></td>
         <td><%= link_to 'Edit', edit_card_path(card) %></td>
         <td><%= link_to 'Destroy', card, method: :delete, data: { confirm: 'Are you sure?' } %></td>
