--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id %>
+  </div>
+  <div class="field">
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
